Fix dialog exit icon alignment

--- a/src/stylesheets/components/_dialog.scss
+++ b/src/stylesheets/components/_dialog.scss
@@ -62,7 +62,7 @@
         position: absolute;
         right: 20px;
         top: 15px;
-        width: 15px;
+        width: 20px;
         height: 20px;
         text-align: center;
         color: #9b9b9b;
